# Python-Challange

./: google_classroom_client.py  main.py  pyproject.toml  secrets.py  test_utils.py
data/: course_928586459_students.json  courses.json  discovery.json  throttled_error.json  user_profile.json
