[tool.poetry]
name = "repl_python3_Python-Challange"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httplib2 = "^0.18.1"
oauth2client = "^4.1.3"
solution = "^5.4.0"
google-api-python-client = "^1.12.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
